// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches snapshot with children 1`] = `
<DocumentFragment>
  <div
    class=""
    id=""
  >
    Subtitle content
  </div>
</DocumentFragment>
`;

exports[`Matches snapshot without children 1`] = `
<DocumentFragment>
  <div
    class=""
    id=""
  />
</DocumentFragment>
`;
